Modificacion del inicio

--- a/store.html
+++ b/store.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Business Casual - Start Bootstrap Theme</title>
+        <title>Librerías folklore</title>
         <link rel="icon" type="image/x-icon" href="assets/book.svg" />
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
@@ -46,16 +46,16 @@
                             </h2>
                             <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
                                 <li class="list-unstyled-item list-hours-item d-flex">
-                                    Av. Patriotas de nueva inglaterra 4589. Plaza Revolución, San Guzmán, Ciudad de México 
+                                    Av. Imaginacion 4560, col. Paz, Ciudad de México 
                                 </li>
                                 <li class="list-unstyled-item list-hours-item d-flex">
-                                    Calz. Revolucionarios de Nacozari 7894. Col. Prado de las rosas, Javier Michigan, San Luis Potosí
+                                    Calz. Romance 7894. Col. Roma, San Luis Potosí
                                 </li>
                                 <li class="list-unstyled-item list-hours-item d-flex">
-                                    Av. Patria 5683. Col. Chapultepec, San Marcos, Jalisco
+                                    Av. Terror 5683. Col. Chapultepec, Jalisco
                                 </li>
                                 <li class="list-unstyled-item list-hours-item d-flex">
-                                    Av. Independencia 2389. Col. Plan de San Luis, Xalapa, Veracruz
+                                    Av. Martirio 2389. Col. Civil, Veracruz
                                 </li>
                             </ul>
 
