--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                 <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="assets/img/Harry potter.jpg" class="d-block w-100" alt="...">
+                        <img src="assets/img/harry.jpg" class="d-block w-100" alt="...">
                       </div>
                       <div class="carousel-item">
                         <img src="assets/img/Percy-1.jpg" class="d-block w-100" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="assets/img/meses a tu lado.jpg" class="d-block w-100" alt="...">
+                        <img src="assets/img/meses.jpg" class="d-block w-100" alt="...">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
